# mordor

./: .dockerignore  .gitignore  .ocamlformat  .ocamlformat-ignore  CHANGELOG.md  DOCKER_GUIDE.md  Dockerfile  Makefile  OVA_GUIDE.md  README.md  SUMMARY.md  TRANSLATION_PATTERNS.md  build_ova.sh  docker-compose.yml  dune-project  mordor-web.opam  mordor-web.service  mordor.opam  mordor.pkr.hcl  preseed.cfg  smrd.opam
src/: README.md  algorithms.ml  assertion.ml  ast.ml  canonicalize.ml  canonicalize.mli  coherence.ml  coherence.mli  context.ml  dune  elaborations.ml  episodicity.ml  events.ml  eventstructures.ml  eventstructures.mli  eventstructureviz.ml  executions.ml  executions.mli  executions_export.ml  expr.ml  forwarding.ml  forwardingcontext.ml  futures.ml  interpret.ml  ir.ml  ir.mli  ir_context_utils.ml  isa_export.ml  justifications.ml  landmark_lwt.ml  lexer.mll  logs_safe.ml  lwt_utils.ml  main.ml  monad.ml  parse.ml  parse.mli  parser.mly  parser_state.ml  pretty.ml  (+15 more)
test/: SMRD_PAPER_UNIT_TESTS_INDEX.md  SMRD_PAPER_UNIT_TESTS_README.md  dune  test_advanced_mrd.ml  test_algorithms.ml  test_assertion.ml  test_canonicalize.ml  test_coherence.ml  test_elaborations.ml  test_episodicity.ml  test_events.ml  test_executions.ml  test_executions_export.ml  test_expr.ml  test_forwarding.ml  test_forwardingcontext.ml  test_histories_futures.ml  test_integration.ml  test_integration_episodicity.ml  test_integration_litmus_tests.ml  test_interpret.ml  test_isa_export.ml  test_model_and_tuple_features.ml  test_mordor.ml  test_parse.ml  test_properties_mrd.ml  test_smrd.ml  test_smrd_parser.ml  test_solver.ml  test_symbolic_mrd.ml  test_types.ml  test_uset.ml
test/golden/: dune  golden_diff.ml
test/goldens/litmus-tests/: 3.2W.lit.golden  basic.lit.lit.golden
test/goldens/litmus-tests-promising/: COH.lit.golden  LBa'.lit.golden  LBa.lit.golden  LBd.lit.golden  LBr.lit.golden  MP+fences.lit.golden  Page 7 Column 1.lit.golden  Page 7 Column 1b.lit.golden  Par-Inc.lit.golden  SB+fences.lit.golden  Upd-Stuck.lit.golden
test/goldens/litmus-tests-promising/LBaa/: LBa'0.lit.golden  LBa'1.lit.golden
test/goldens/litmus-tests-refinement/avoidoota/: listing8.lit.golden  listing9.lit.golden
test/goldens/litmus-tests-review/symmrd/: LB+UB+data+z.lit.golden
test/goldens/litmus-tests/ISO/: 1-MP.lit.golden  2-MP+rel+acq.lit.golden  5-LB+false-dep.lit.golden
test/goldens/litmus-tests/atomics/: mp-atomic2.lit.golden
test/goldens/litmus-tests/avoidoota/: additional_inventintload.lit.golden  additional_nonlb.lit.golden  listing11.lit.golden  listing12.lit.golden  listing13.lit.golden  listing14.lit.golden  listing15.lit.golden  listing16.lit.golden  listing17.lit.golden  listing18.lit.golden  listing19.lit.golden  listing20.lit.golden  listing21.lit.golden  listing22.lit.golden  listing23.lit.golden  listing24.lit.golden  listing25.lit.golden  listing26.lit.golden  listing27_forbid.lit.golden  listing2_5.lit.golden  listing2_5pwg.lit.golden  listing3.lit.golden
test/goldens/litmus-tests/basic/: coproduct-exns.lit.golden  lb.lit.golden  par-comp.lit.golden  rw.lit.golden
test/goldens/litmus-tests/c20/: rs-example.lit.golden
test/goldens/litmus-tests/esop_problem/: RRE.lit.golden  cse.lit.golden  lb+ctrldata+ctrl-double.lit.golden  lb+ctrldata+po.lit.golden  lb.lit.golden
test/goldens/litmus-tests/fowm2024/: load intro - potential aliasing.lit.golden  nullptr - no use.lit.golden  nullptr - use.lit.golden
test/goldens/litmus-tests/imm/: LB+falsedep+Fsc.lit.golden
test/goldens/litmus-tests/jctc/: JCTC10.lit.golden  JCTC11.lit.golden  JCTC12.lit.golden  JCTC13.lit.golden  JCTC14.lit.golden  JCTC15.lit.golden  JCTC16.lit.golden  JCTC17-left.lit.golden  JCTC17-smaller.lit.golden  JCTC17.lit.golden  JCTC18.lit.golden  JCTC19.lit.golden  JCTC2.lit.golden  JCTC20.lit.golden  JCTC3.lit.golden  JCTC5.lit.golden  JCTC6.lit.golden  JCTC7.lit.golden  JCTC8.lit.golden  JCTC9b.lit.golden
test/goldens/litmus-tests/on_thin_air_reads19/: P4.lit.golden  P5.lit.golden  P6.lit.golden  TC7.lit.golden  TC9a.lit.golden  ex3.5.lit.golden  s5.3.2.lit.golden
test/goldens/litmus-tests/opts/: store-forward.lit.golden
test/goldens/litmus-tests/own/: DOMAIN.lit.golden  FWD-STRENGTHEN-LIFT.lit.golden  FreeRace.lit.golden  FreeRace2.lit.golden  JCTC12.lit.golden  LF.lit.golden  OOTA7.lit.golden  ORI.lit.golden  ORI2.lit.golden  VRA-JCTC1.lit.golden  coproductReorder.lit.golden  ctrl_subsumed_by_data.lit.golden  elideanddontobserve.lit.golden  expressionPreservingSubstitution.lit.golden  paper108.lit.golden  paper109.lit.golden  paper112F.lit.golden  paper113.lit.golden  paper115.lit.golden  speculative_optimisation.lit.golden
test/goldens/litmus-tests/pldi_repairing/: IRIW+acq+sc.lit.golden  LB+deps.lit.golden  LB.lit.golden  RWC+syncs.lit.golden  W+WRC.lit.golden
test/goldens/litmus-tests/popl_bridging/: ARM FADD.lit.golden  FADD Example.lit.golden  IRIW+Fsc+Fsc.lit.golden  Load buffering with acquire reads.lit.golden  Load buffering with release writes.lit.golden  PSC.lit.golden  Preserving detour.lit.golden  RMW Atomicity.lit.golden  rfi is not always preserved.lit.golden
test/goldens/litmus-tests/popl_bubbly/: LB+deps.lit.golden
test/goldens/litmus-tests/popl_grounding/: Coh-CYC (Soham).lit.golden  Coh.lit.golden  Cwrites.lit.golden  FADD.lit.golden  LB.lit.golden  LBfd.lit.golden  RNG.lit.golden  RNGb.lit.golden
test/goldens/litmus-tests/popl_promising/: 2+2W.lit.golden  ARM-weak.lit.golden  CYC.lit.golden  MP+fences.lit.golden  Page 7 Column 1.lit.golden  Page 7 Column 1b.lit.golden  Par-Inc.lit.golden  SB+fences.lit.golden  SB.lit.golden  Upd-Stuck.lit.golden
test/goldens/litmus-tests/requests/: E8OKvIVLN (2+2W with obs thread).lit.golden  ZcUmGBDR9 (MP).lit.golden  ptmsQeW4i (CoWR).lit.golden
test/goldens/litmus-tests/rmw/: cas_acqrel_failure_reorder.lit.golden
web/: GRAPH_VISUALIZATION_GUIDE.md  QUICKSTART.md  README.md  dune  episodicity_runner_api.ml  server.ml  test_runner_api.ml
web/frontend/: graph-visualizer.js  help.html  index.html
web/frontend/static/css/: mordor.css  (+1 more)
(+381 files in other folders)
