(lang dune 3.7)
(name smrd)
(generate_opam_files true)
(source (github username/smrd))
(authors "sMRD Contributors")
(maintainers "maintainer@example.com")
(license MIT)
(package
 (name smrd)
 (allow_empty)
 (synopsis "Symbolic Memory Relaxation Dependency analyzer")
 (description "OCaml implementation of sMRD memory model verifier")
 (depends
  (ocaml (>= 4.14))
  core
  (dune (>= 3.7))
  (lwt (>= 5.6.0))
  (lwt_ppx (>= 2.0.0))
  (z3 (>= 4.8.0))
  (zarith (>= 1.12))
  (containers (>= 3.0))
  (landmarks (>= 1.4))
  (landmarks-ppx (>= 1.4))
  (alcotest :with-test)))
