(lang dune 3.7)
(name mordor)
(generate_opam_files true)
(source (github christiankissig/mordor))
(authors "Christian Kissig <dev@kissig.fastmail.fm>")
(maintainers "dev@kissig.fastmail.fm")
(license MIT)
(using menhir 2.1)
(package
 (name mordor)
 (allow_empty)
 (synopsis "Symbolic Memory Relaxation Dependency analyzer")
 (description "OCaml implementation of sMRD memory model verifier")
 (depends
  (ocaml (>= 5.2.0))
  core
  (dune (>= 3.7))
  (ocamlgraph (>= 2.2.0))
  (lwt (>= 5.6.0))
  (lwt_ppx (>= 2.0.0))
  (z3 (>= 4.8.0))
  (zarith (>= 1.12))
  (containers (>= 3.0))
  (landmarks (>= 1.4))
  (landmarks-ppx (>= 1.4))
  (alcotest :with-test)))
