(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain))

(library
 (name mordor_lib)
 (wrapped false)
 (modules
  assertion
  ast
  coherence
  context
  elaborations
  episodicity
  events
  executions
  expr
  eventstructureviz
  forwardingcontext
  futures
  interpret
  ir
  justifications
  lexer
  parse
  parser
  rewrite
  solver
  symmrd
  trees
  types
  uset
  utils)
 (flags
  (:standard -g -w -26-27))
 (libraries core ocamlgraph logs logs.fmt lwt lwt.unix z3 zarith)
 (public_name mordor)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name main)
 (public_name mordor)
 (modules main)
 (flags
  (:standard -g))
 (libraries mordor_lib lwt lwt.unix)
 (preprocess
  (pps lwt_ppx landmarks-ppx --auto)))
