(rule
 (target version.ml)
 (action
  (with-stdout-to
   %{target}
   (echo "let version = \"%{version:mordor}\""))))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain))

(library
 (name mordor_lib)
 (wrapped false)
 (modules
  algorithms
  assertion
  ast
  coherence
  context
  elaborations
  episodicity
  events
  eventstructures
  eventstructureviz
  executions
  expr
  forwarding
  futures
  interpret
  ir
  ir_context_utils
  justifications
  lexer
  lwt_utils
  logs_safe
  monad
  parse
  parser
  parser_state
  pretty
  solver
  source_info
  types
  uset
  version)
 (flags
  (:standard -g -w -26-27))
 (libraries
  core
  ocamlgraph
  landmarks
  logs
  logs.fmt
  lwt
  lwt.unix
  lwt_domain
  z3
  zarith
  yojson
  ppx_deriving.runtime
  ppx_deriving_yojson.runtime)
 (public_name mordor)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving_hash
   lwt_ppx
   ppx_deriving.show
   ppx_deriving_yojson)))
