(test
 (name test_mordor)
 (modes byte exe)
 (flags
  (:standard -g -w -33-26))
 (ocamlc_flags
  (:standard -g))
 ; Add debugging information
 (modules
  test_mordor
  ; other test modules
  test_advanced_mrd
  test_algorithms
  test_coherence
  test_elaborations
  test_events
  test_executions
  test_expr
  test_forwardingcontext
  test_histories_futures
  test_interpret
  test_model_and_tuple_features
  test_parse
  test_properties_mrd
  test_solver
  test_symbolic_mrd
  test_types
  test_uset)
 (libraries mordor_lib lwt lwt.unix z3 zarith core str alcotest)
 (preprocess
  (pps lwt_ppx)))

(test
 (name test_integration)
 (modes byte exe)
 (flags
  (:standard -g -w -33-26))
 (ocamlc_flags
  (:standard -g))
 (modules
  test_integration
  ; other integration test modules
  test_integration_litmus_tests)
 (libraries mordor_lib lwt lwt.unix z3 zarith core str alcotest unix)
 (preprocess
  (pps lwt_ppx))
 (deps ../src/main.exe))
