(executable
 (name server) ; Internal name: server.ml
 (public_name mordor-web) ; CLI command name: "mordor-web"
 (package mordor-web) ; Package name
 (modules server test_runner_api)
 (flags
  (:standard -g -w -32-33 -w -26))
 ; Debug symbols enabled, disable unused warnings
 (libraries
  mordor_lib ; Your existing Mordor library
  dream ; Web framework
  yojson ; JSON handling
  landmarks
  lwt ; Async runtime
  lwt.unix)
 ; Unix operations
 (preprocess
  (pps ppx_deriving_yojson lwt_ppx landmarks-ppx --auto)))

; Lwt syntax sugar (let*, let+, etc.)
